# DeFT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  config.cmake  pyproject.toml
DeFT/: DeFT_Readme.md  mypy.ini  pyproject.toml  requirements.txt
DeFT/deft/: data_loader.py  hf_transformers_utils.py  logger.py  memory_pool.py  model_config.py  model_runner.py  sampling_params.py  utils.py
DeFT/deft/layers/: activation.py  layernorm.py  linear.py  logits_processor.py  rotary_embedding.py
DeFT/deft/layers/attention/: context_flashattention_nopad.py  deft_attention.py  token_attention.py  tree_attention.py
DeFT/deft/layers/attention/unpaged/: causal_masked.py  flash_attention.py  token_attention.py  tree_attention.py
DeFT/deft/models/: llama2.py
DeFT/deft/tree_decoding/: branch_controller.py  perf_metrics.py  timer.py  tree_cache.py  tree_index_pool.py
DeFT/deft/tree_decoding/generation/: branch_func_example.py  tree_generate.py
DeFT/examples/: run_DeFT_llama_paged.py
DeFT/experiments/ablation/different_gpu/few_shot_4090/: few_shot_flatten_paged_1.json  few_shot_flatten_paged_10.json  few_shot_flatten_paged_16.json  few_shot_flatten_paged_2.json  few_shot_flatten_paged_20.json  few_shot_flatten_paged_30.json  few_shot_flatten_paged_50.json  few_shot_flatten_paged_8.json  few_shot_node_paged_1.json  few_shot_node_paged_10.json  few_shot_node_paged_20.json  few_shot_node_paged_30.json  few_shot_node_paged_50.json  few_shot_seq_paged_1.json  few_shot_seq_paged_10.json  few_shot_seq_paged_16.json  few_shot_seq_paged_20.json  few_shot_seq_paged_30.json  few_shot_seq_paged_50.json  few_shot_seq_unpaged_20.json  few_shot_seq_unpaged_30.json  few_shot_tree_unpaged_1.json  few_shot_tree_unpaged_20.json  few_shot_tree_unpaged_30.json  few_shot_tree_unpaged_50.json
DeFT/experiments/ablation/different_model/few_shot_codellama/: few_shot.ipynb  few_shot_flatten_paged_30.json  few_shot_node_paged_20.json  few_shot_node_paged_30.json  few_shot_node_paged_50.json  few_shot_seq_paged_30.json
DeFT/experiments/ablation/prompt_len/0/: sorting128ToT_flatten_paged_0.json  sorting128ToT_flatten_paged_1.json  sorting128ToT_flatten_paged_2.json  sorting128ToT_flatten_paged_3.json  sorting128ToT_flatten_paged_4.json  sorting128ToT_flatten_paged_5.json  sorting128ToT_flatten_paged_6.json  sorting128ToT_flatten_paged_7.json  sorting128ToT_flatten_paged_8.json  sorting128ToT_flatten_paged_9.json  sorting128ToT_node_paged_0.json  sorting128ToT_node_paged_1.json  sorting128ToT_node_paged_2.json  sorting128ToT_node_paged_3.json  sorting128ToT_node_paged_4.json  sorting128ToT_node_paged_5.json  sorting128ToT_node_paged_6.json  sorting128ToT_node_paged_7.json  sorting128ToT_node_paged_8.json  sorting128ToT_node_paged_9.json  sorting128ToT_seq_paged_0.json  sorting128ToT_seq_paged_1.json  sorting128ToT_seq_paged_2.json  sorting128ToT_seq_paged_3.json  sorting128ToT_seq_paged_4.json  sorting128ToT_seq_paged_5.json  sorting128ToT_seq_paged_6.json  sorting128ToT_seq_paged_7.json  sorting128ToT_seq_paged_8.json  sorting128ToT_seq_paged_9.json
DeFT/experiments/ablation/prompt_len/10000/: sorting128ToT_flatten_paged_0.json  sorting128ToT_flatten_paged_1.json  sorting128ToT_flatten_paged_2.json  sorting128ToT_flatten_paged_3.json  sorting128ToT_flatten_paged_4.json  sorting128ToT_flatten_paged_5.json  sorting128ToT_flatten_paged_6.json  sorting128ToT_flatten_paged_7.json  sorting128ToT_flatten_paged_8.json  sorting128ToT_flatten_paged_9.json  sorting128ToT_seq_paged_0.json  sorting128ToT_seq_paged_1.json  sorting128ToT_seq_paged_2.json  sorting128ToT_seq_paged_3.json  sorting128ToT_seq_paged_4.json  sorting128ToT_seq_paged_5.json  sorting128ToT_seq_paged_6.json  sorting128ToT_seq_paged_7.json  sorting128ToT_seq_paged_8.json  sorting128ToT_seq_paged_9.json
DeFT/experiments/ablation/prompt_len/5000/: sorting128ToT_flatten_paged_0.json  sorting128ToT_flatten_paged_1.json  sorting128ToT_flatten_paged_2.json  sorting128ToT_flatten_paged_3.json  sorting128ToT_flatten_paged_4.json  sorting128ToT_flatten_paged_5.json  sorting128ToT_flatten_paged_6.json  sorting128ToT_flatten_paged_7.json  sorting128ToT_flatten_paged_8.json  sorting128ToT_flatten_paged_9.json  sorting128ToT_seq_paged_0.json  sorting128ToT_seq_paged_1.json  sorting128ToT_seq_paged_2.json  sorting128ToT_seq_paged_3.json  sorting128ToT_seq_paged_4.json  sorting128ToT_seq_paged_5.json  sorting128ToT_seq_paged_6.json  sorting128ToT_seq_paged_7.json  sorting128ToT_seq_paged_8.json  sorting128ToT_seq_paged_9.json
DeFT/experiments/ablation/prompt_len/8000/: sorting128ToT_flatten_paged_0.json  sorting128ToT_flatten_paged_1.json  sorting128ToT_flatten_paged_2.json  sorting128ToT_flatten_paged_3.json  sorting128ToT_flatten_paged_4.json  sorting128ToT_flatten_paged_5.json  sorting128ToT_flatten_paged_6.json  sorting128ToT_flatten_paged_7.json  sorting128ToT_flatten_paged_8.json  sorting128ToT_flatten_paged_9.json  sorting128ToT_seq_paged_0.json  sorting128ToT_seq_paged_1.json  sorting128ToT_seq_paged_2.json  sorting128ToT_seq_paged_3.json  sorting128ToT_seq_paged_4.json  sorting128ToT_seq_paged_5.json  (+4 more)
DeFT/experiments/few_shot_prompting/: few_shot.ipynb  run_few_shot.sh
DeFT/experiments/reasoning/: reasoning.ipynb  run_reasoning.sh
DeFT/experiments/speculative_decoding/: run_speculative_decoding.sh  speculative_decoding.ipynb
DeFT/tests/model/: test_DeFT_kernel.py  test_llama.py  test_paged_mem.py
csrc/: deft_api.cpp
(+419 files in other folders)
